Security and initial setup - not ready yet.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/AdventureAlley
+spring.datasource.username=extra
+spring.datasource.password=1234
+
+# Skal Hibernate generere tabeller i mySQL hvis tabellen "mangler" - Nej
+spring.jpa.hibernate.ddl-auto=none
+
+
+# Hvor meget skal spring printe i konsollen - info
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# spring.mvc.log-request-details=true
