--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/AdventureAlley
+spring.datasource.url=jdbc:mysql://localhost:3306/adventure_alley
 spring.datasource.username=extra
 spring.datasource.password=1234
 
