--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 # spring.mvc.log-request-details=true
+
+# Hvis vi beder Spring om at konvertere til eller fra json et sted i vores projekt, så informerer dette Spring om at det er Gson vi skal gøre det med.
+spring.mvc.converters.preferred-json-mapper=gson
